fix(frontend): better handle overflow

--- a/frontend/src/component/FeedItem/FeedItemHeader.styl
+++ b/frontend/src/component/FeedItem/FeedItemHeader.styl
@@ -24,7 +24,6 @@
     text-align end
     align-items flex-end
     flex 1
-    overflow hidden
   &__unavailable
     font-style italic
     padding-inline-end standardSpacing
@@ -41,7 +40,8 @@
       border none
       & .iconbutton__text
         padding 0
-
+  & .profileNavigation
+    max-width 100px
   & .breadcrumbs
     position relative
     top 0
