--- a/frontend_lib/src/component/FilenameWithExtension/FilenameWithExtension.styl
+++ b/frontend_lib/src/component/FilenameWithExtension/FilenameWithExtension.styl
@@ -1,9 +1,9 @@
 .FilenameWithExtension
-    display flex
-    align-items center
-
-    &__label
-        overflow hidden
-        text-overflow ellipsis
-    & .badge
-        direction ltr
+  display flex
+  align-items center
+  &__label
+    overflow hidden
+    text-overflow ellipsis
+    unicode-bidi plaintext
+  & .badge
+    direction ltr
